--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,11 @@
 /*-----------------
     HEADER
 ------------------*/
-  .container {
+  .header {
+    width: 100%;
+  }
+
+.container {
     width: 60%;
     display: flex;
     align-items: center;
@@ -48,6 +52,11 @@
     display: flex;
   }
 
+  .hero {
+    display: flex;
+    width: 100%;
+  }
+
   
   .black h1 {
     margin-left: 180px;
@@ -60,6 +69,7 @@
 .main{
     background-color: #0282f9;
     display: flex; 
+    width: 100%;
 }
 .upper {
     display: flex;
@@ -99,6 +109,7 @@ display: flex;
   background-image: url(../public/footer-bg.jpg);
   background-repeat: no-repeat ;
   background-size: cover;
+  width: 100%;
 }
 
 .container-footer {
